--- a/approach.html
+++ b/approach.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <div class="doc">
   <style type="text/css">
-  
+  .doc {background-color: lightblue;}
   </style>
 <head>
   <!-- Required meta tags -->
@@ -12,7 +12,7 @@
   <!-- Bootstrap CSS -->
   <link href="bootstrap.min.css" rel="stylesheet">
 
-  <title>ALLC!</title>
+  <title>Approach</title>
 </head>
 <body>
   <div class="container">
@@ -57,7 +57,7 @@
 
           </div>  
         </li>
-          <div class="button"><button type="button" class="btn btn-warning">Donate Today!</button>
+          <div class="button"><button type="button" class="btn btn-outline-warning">Donate Today!</button>
       </div>
 
       </ul>
@@ -83,7 +83,19 @@
 <h4>Independence Through Intervention</h4>
 <p>The Independence through Intervention program targets giving individuals with autism the life skills to live a safe, happy life of independence. The therapists at ALLC focus on various life skills such as: crossing the street, calling 9-1-1, counting money, making a grocery list, going shopping, obtaining transportation, preparing meals, taking medicine, knowing basic first aid, house keeping, etc.</p>
 <p>We have a “mock apartment” set up so that the children can learn to complete the various skills needed to become more independent. The apartment currently has a bed, a refrigerator, a dishwasher, an ironing board, and a bathroom with plans to purchase a washer and dryer in the near future. The children also participate in community outings with their therapists to work on navigating public transportation, communication, learning how to ask for help, building social relationships, learning to read signs, eating at a restaurant, and volunteering. Currently, the children volunteer at Catholic Charities on Wednesdays where they package meals, stock the pantry, etc. Therapists also work on self-advocacy, self-regulation, pursuing interests, communication, etc. while at the Center and while in the community.</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      </div>
+    <div class="col">
+    <img src="approach.jpg">
+    </div>
+    <div class="col">
+    </div>
+  </div>
 </div>
+</div>
+
 
 
       
