--- a/donate.html
+++ b/donate.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <div class="doc">
   <style type="text/css">
-  
-</style>
+  .doc {background-color: lightblue;}
+  .head {text-decoration-color: black;}
+  .p {text-decoration-color: black;}</p></style>
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -12,7 +13,7 @@
   <!-- Bootstrap CSS -->
   <link href="bootstrap.min.css" rel="stylesheet">
 
-  <title>Hello, world!</title>
+  <title>Ways to Help!</title>
 </head>
 <body>
   <div class="container">
@@ -48,7 +49,7 @@
 
       
             </li>
-            <div class="button"><button type="button" class="btn btn-warning">Donate Today!</button>
+            <div class="button"><button type="button" class="btn btn-outline-warning">Donate Today!</button>
             </div>
 
           </ul>
