--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <div class="doc">
   <style type="text/css">
-  
+  .doc {background-color: lightblue;}
 </style>
 <head>
   <!-- Required meta tags -->
@@ -48,7 +48,7 @@
 
               </div>  
             </li>
-            <div class="button"><button type="button" class="btn btn-warning">Donate Today!</button>
+            <div class="button"><button type="button" class="btn btn-outline-warning">Donate Today!</button>
             </div>
 
           </ul>
