--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <div class="doc">
   <style type="text/css">
-  
+  .doc {background-color: lightblue;}
 </style>
 <head>
   <!-- Required meta tags -->
@@ -12,7 +12,7 @@
   <!-- Bootstrap CSS -->
   <link href="bootstrap.min.css" rel="stylesheet">
 
-  <title>ALLC!</title>
+  <title>Gallery</title>
 </head>
 <body>
   <div class="container">
@@ -50,7 +50,7 @@
         </li>
         
             
-            <div class="button"><button type="button" class="btn btn-warning">Donate Today!</button>
+            <div class="button"><button type="button" class="btn btn-outline-warning">Donate Today!</button>
             </div>
 
           </ul>
