--- a/donate.html
+++ b/donate.html
@@ -3,8 +3,7 @@
 <div class="doc">
   <style type="text/css">
   .doc {background-color: lightblue;}
-  .head {text-decoration-color: black;}
-  .p {text-decoration-color: black;}</p></style>
+  </style>
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -17,7 +16,7 @@
 </head>
 <body>
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"><img src="allc.jpg">
       <div class="container-fluid">
         <a class="navbar-brand" href="home.html">Augusta Levy Learning Center</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
