--- a/home.html
+++ b/home.html
@@ -15,10 +15,11 @@
   <title>ALLC!</title>
 </head>
 <body>
-  <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container"> 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"><img src="allc.jpg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Augusta Levy Learning Center</a>
+        <a class="navbar-brand" href="#">
+         Augusta Levy Learning Center</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,8 +49,8 @@
 
               </div>  
             </li>
-            <div class="button"><button type="button" class="btn btn-outline-warning">Donate Today!</button>
-            </div>
+   <div class="button"><button type="button" class="btn btn-outline-warning">Donate Today!</button>
+</div>
 
           </ul>
 
@@ -79,6 +80,7 @@
           <a class="nav-link" href="#item-3">Students</a>
         </nav>
       </nav>
+
     </div>
     <div class="col"><div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-offset="0" tabindex="0">
       <h4 id="item-1">About Us</h4>
